overflow problem solved

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background-color: #f5f5f5;
     font-family: Arial, sans-serif;
+    overflow:scroll !important;
 }
 
 #app-container {
